quorum/test/tests/TypeChecker/Pass/ImpAssignBooleanBoolObjWrapped.quorum
class main
    action main
        Boolean bool
        bool:SetValue(true)
        boolean b = bool
    end
end