quorum/test/tests/TypeChecker/Fail/ImpAssignBoolObjBooleanWrapped.quorum
class main
    action main
        Boolean b = true
    end
end